--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@vant/touch-emulator": "^1.4.0",
     "amfe-flexible": "^2.2.1",
+    "axios": "^1.2.2",
     "postcss-px2rem-exclude": "0.0.6",
     "px2rem-loader": "^0.1.9",
+    "qs": "^6.9.4",
     "vant": "^2.12.53",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
