--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "qs": "^6.9.4",
     "vant": "^2.12.53",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
